# django-queued-storage

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  backends.rst  changelog.rst  conf.py  fields.rst  index.rst  make.bat  requirements.txt  signals.rst  tasks.rst
queued_storage/: __init__.py  backend.py  backends.py  conf.py  fields.py  models.py  signals.py  tasks.py  test_settings.py  tests.py  utils.py  version.py
queued_storage/tests/: __init__.py  models.py  tasks.py  tests.py
requirements/: tests.txt
tests/: backends.py  celeryconfig.py  models.py  requirements.txt  settings.py  tasks.py  test_storages.py  tests.py
