[global]
setup-hooks =
    queued_storage.version_hook

[metadata]
name = django-queued-storage
author = Sean Brant, Josh VanderLinden
author-email = codekoala@gmail.com
maintainer = Jannis Leidel
maintainer-email = jannis@leidel.info
summary = Provides a proxy for Django storage backends that allows you
          to upload files locally and eventually serve them remotely
description-file = README.rst
license = BSD
requires-dist =
    django-celery >= 2.4.0
    django-appconf >= 0.6
    six
home-page = http://django-queued-storage.readthedocs.org/
project-url =
    Github, https://github.com/jezdez/django-queued-storage/
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Topic :: Utilities

[files]
packages =
    queued_storage
    queued_storage.tests
extra_files =
    README.rst
    AUTHORS
    .travis.yml
    requirements/tests.txt

[backwards_compat]
zip_safe = false

[wheel]
universal = 1
